<resources>
    <string name="app_name">strawtestapp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="forgotBtn">Forgot</string>
    <string name="loading">Loading, please wait...</string>
    <string name="dashboard">Dashboard</string>
    <string name="subject">Subject</string>
    <string name="body">body</string>
    <string name="send">send</string>
    <string name="bodySample">The quick brown fox jumps over the lazy dog.</string>
</resources>
